--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env.translator
 
 npm-debug.log*
 yarn-debug.log*
@@ -28,6 +29,5 @@ nbproject/
 # DirEnv
 .envrc
 
-# Auto-translation Python cache
-.github/auto-translation/__pycache__/
-.github/auto-translation/**/__pycache__/
+# Tools cache
+.tools/cache/
