--- a/.github/workflows/ai-docsite-translation.yml
+++ b/.github/workflows/ai-docsite-translation.yml
@@ -71,6 +71,7 @@ jobs:
 
       - name: Set up Java (Temurin 21)
         if: env.SHOULD_SKIP != 'true'
+        continue-on-error: true
         uses: actions/setup-java@v4
         with:
           distribution: temurin
@@ -79,7 +80,7 @@ jobs:
 
       - name: Run ai-docsite-translator
         if: env.SHOULD_SKIP != 'true'
-        uses: hide212131/ai-docsite-translator@7cb3090ba0fac3a0c465be39117a422ee3afa5a3
+        uses: hide212131/ai-docsite-translator@98e899f8d59c14899fd64a322e51992105356fa9
         with:
           upstream-url: https://github.com/jhipster/jhipster.github.io.git
           origin-url: https://github.com/hide212131/jhipster.github.io-jp.git
