--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@
 .env.test.local
 .env.production.local
 .env.translator
+.secrets.translator
+act-translate.log
 
 npm-debug.log*
 yarn-debug.log*
