--- a/.github/workflows/ai-docsite-translation.yml
+++ b/.github/workflows/ai-docsite-translation.yml
@@ -80,7 +80,7 @@ jobs:
 
       - name: Run ai-docsite-translator
         if: env.SHOULD_SKIP != 'true'
-        uses: hide212131/ai-docsite-translator@98e899f8d59c14899fd64a322e51992105356fa9
+        uses: hide212131/ai-docsite-translator@main
         with:
           upstream-url: https://github.com/jhipster/jhipster.github.io.git
           origin-url: https://github.com/hide212131/jhipster.github.io-jp.git
