--- a/.github/workflows/ai-docsite-translation.yml
+++ b/.github/workflows/ai-docsite-translation.yml
@@ -83,7 +83,7 @@ jobs:
         uses: hide212131/ai-docsite-translator@main
         with:
           upstream-url: https://github.com/jhipster/jhipster.github.io.git
-          origin-url: https://github.com/hide212131/jhipster.github.io-jp.git
+          origin-url: ${{ github.server_url }}/${{ github.repository }}.git
           origin-branch: main
           translation-branch-template: sync-<upstream-short-sha>
           mode: batch
