--- a/.github/workflows/ai-docsite-translation.yml
+++ b/.github/workflows/ai-docsite-translation.yml
@@ -68,6 +68,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ secrets.WORKFLOWS_GITHUB_TOKEN }}
 
       - name: Set up Java (Temurin 21)
         if: env.SHOULD_SKIP != 'true'
