fix: update runbook and requirements to use WORKFLOWS_GITHUB_TOKEN and main branch for ai-docsite-translator

--- a/.secrets.translator.sample
+++ b/.secrets.translator.sample
@@ -1,7 +1,8 @@
 # Copy to .secrets.translator before running `act`.
 # Each line should contain KEY=VALUE without quotes.
+# `GITHUB_TOKEN` should be a PAT equivalent to the repository secret `WORKFLOWS_GITHUB_TOKEN`.
 
-GITHUB_TOKEN=ghp_your_token
+GITHUB_TOKEN=ghp_your_workflows_token
 GEMINI_API_KEY=your_gemini_api_key
 BOT_GIT_USER=jhipster-jp-bot
 BOT_GIT_EMAIL=jhipster-jp-bot@users.noreply.github.com
